# YanTuYouWo

./: .gitignore  render.yaml  voice_interaction_animation.spline
backend/: .dockerignore  .env.example  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
backend/scripts/: migrate_to_postgres.py  seed_data.py  test_all.py
backend/src/: __init__.py  config.py  database.py  dependencies.py  main.py
backend/src/models/: __init__.py  ai.py  community.py  faculty.py  notice.py  progress.py  tutor.py  university.py  user.py
backend/src/routers/: admin.py  ai.py  auth.py  community.py  favorites.py  notices.py  progress.py  schools.py  search.py  stats.py  tutors.py  user.py  voice.py
crawl/: .env.example  .gitignore  pyproject.toml
crawl/data/: large_scale_test.db-journal  large_scale_test.db-shm  large_scale_test.db-wal
crawl/scripts/: add_211_universities.py  analyze_failed_sources.py  batch_fix_data.py  fix_and_recrawl.py  fix_low_coverage.py  fix_sources.py  fix_urls.py  fix_urls_v2.py  init_db.py  init_tutor_tables.py  llm_fix_data.py  llm_fix_dates.py  manual_supplement.py  optimize_sources.py  rerun_all_uncrawled.py  rerun_failed.py  rerun_uncovered.sh  run_crawl.py  run_discovery.py  run_faculty_discovery.py  run_large_scale_test.py  run_phase2.py  run_tutor_crawl.py  run_tutor_enrich.py  run_tutor_profile.py  search_wechat.py  test_low_coverage.py  test_lzu_pw.py  test_uncovered.py
crawl/src/: __init__.py  config.py  main.py
crawl/tests/: test_all_985_crawl.py  test_anti_crawl_fallback.py  test_failed_depts.py  test_pagination.py  test_phase1.py  test_phase1_extended.py  test_phase2_locate.py  test_phase3_e2e.py  test_phase3_full.py  test_phase3_unit.py  test_playwright_anti_crawl.py  test_quick_crawl.py  test_quick_fix.py  test_real_crawl.py
(+206 files in other folders)
